Fix delete button alignment

--- a/public/stylesheets/components/main.scss
+++ b/public/stylesheets/components/main.scss
@@ -14,6 +14,7 @@
 .main__header {
   height: $s-header-height;
   margin-top: -$s-header-height - 30px;
+  margin-left: -30px;
   float: left;
   padding: 10px;
   z-index: 2;
